# UefiVarMonitor

./: README.md
UefiVarMonitorExClient/: .gitignore  UefiVarMonitorExClient.sln
UefiVarMonitorExClient/UefiVarMonitorExClient/: UefiVarMonitorExClient.c  UefiVarMonitorExClient.vcxproj  UefiVarMonitorExClient.vcxproj.filters
UefiVarMonitorPkg/: UefiVarMonitorPkg.dec  UefiVarMonitorPkg.dsc
UefiVarMonitorPkg/Drivers/UefiVarMonitorDxe/: UefiVarMonitorDxe.c  UefiVarMonitorDxe.inf
UefiVarMonitorPkg/Drivers/UefiVarMonitorExDxe/: UefiVarMonitorExDxe.c  UefiVarMonitorExDxe.h  UefiVarMonitorExDxe.inf
uefi-var-monitor/: Cargo.toml  OVMF_CODE.fd  OVMF_VARS.fd  RunQemu.bat
uefi-var-monitor/.cargo/: config.toml
uefi-var-monitor/src/: main.rs
